<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".MainActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true">

            <RelativeLayout
                android:id="@+id/rel_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                </android.support.v7.widget.RecyclerView>

                <View
                    android:id="@+id/divider_line_1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/recyclerView"
                    android:layout_marginTop="15dp"
                    android:background="@android:color/black" />

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="fill_parent"
                    android:layout_height="120dp"
                    android:layout_below="@+id/divider_line_1" />

                <com.viewpagerindicator.CirclePageIndicator
                    android:id="@+id/indicator"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/viewPager"
                    android:padding="10dip" />

                <View
                    android:id="@+id/divider_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/indicator"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/black" />

                <LinearLayout
                    android:id="@+id/ll1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/divider_line"
                    android:layout_marginTop="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="UselessParent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/text_view_1"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:ignore="RtlHardcoded" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/text_view_2"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll2">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:text="@string/text_view_3"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:ignore="RtlHardcoded" />
                    </RelativeLayout>
                </LinearLayout>

                <View
                    android:id="@+id/divider_line_3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/ll3"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/black" />

                <TextView
                    android:id="@+id/mapped_item_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/divider_line_3"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/divider_line_4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/mapped_item_text_view"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/black" />

                <LinearLayout
                    android:id="@+id/ll4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/divider_line_4"
                    android:layout_marginTop="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/btn_red_item"
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:layout_alignParentLeft="true"
                            android:background="@drawable/curved_rectangle_with_border"
                            android:text="@string/red_btn"
                            tools:ignore="RtlHardcoded" />

                        <Button
                            android:id="@+id/btn_blue_item"
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:layout_centerInParent="true"
                            android:background="@drawable/curved_rectangle_with_border"
                            android:text="@string/blue_btn" />

                        <Button
                            android:id="@+id/btn_green_item"
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:layout_alignParentRight="true"
                            android:background="@drawable/curved_rectangle_with_border"
                            android:text="@string/green_btn" />
                    </RelativeLayout>
                </LinearLayout>

                <View
                    android:id="@+id/divider_line_5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/ll4"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/black" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/divider_line_5">

                    <Button
                        android:id="@+id/scenario_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginRight="45dp"
                        android:layout_marginBottom="25dp"
                        android:background="@color/blue"
                        android:text="@string/go_to_scenario_2"
                        android:textColor="@color/white"
                        tools:ignore="RtlHardcoded" />
                </RelativeLayout>
            </RelativeLayout>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>