<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpinnerActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner_container"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/custom_drop_down"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/mode_of_transport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinner_container"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/mode_of_transport"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/car_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mode_of_transport"
                android:layout_marginLeft="45dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text=""
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/train_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/car_txt"
                android:layout_marginLeft="45dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text=""
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/car_txt"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="45dp"
                android:layout_marginRight="45dp"
                android:text="@string/navigate_directions"

                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_location"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="45dp"
                android:layout_marginBottom="25dp">

                <Button
                    android:id="@+id/scenario_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@color/blue"
                    android:text="@string/go_to_scenario_1"
                    android:textColor="@color/white"

                    />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>